--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,19 +1,25 @@
-<h1>Вопросы</h1>
+<h1 class="mb-4">Вопросы</h1>
 
-<% @questions.inspect %>
-
+<%= link_to 'Новый вопрос', new_question_path, class: 'btn btn-primary btn-lg' %>
 <% @questions.each do |question| %>
-  <h2><%= question.title %></h2>
+  <article class="card mt-3">
+    <div class="card-body">
+      <h4><%= question.title %></h2>
 
-  <time datetime="<%= question.formatted_created_at %>">
-    <%= question.formatted_created_at %>
-  </time>
+      <section class="card-text">
+        <time datetime="<%= question.formatted_created_at %>">
+          <small><%= question.formatted_created_at %></small>
+        </time>
 
-  <p>
-    <%= question.body %>
-    <br>
-    <%= link_to "Показать", question_path(question) %> |
-    <%= link_to "Редактировать", edit_question_path(question) %> |
-    <%= link_to "Удалить", question_path(question), data: {turbo_method: :delete, turbo_confirm: 'Вы уверены, что хотите удалить вопрос?'} %>
-  </p>
+        <p class="my-2">
+          <%= question.body %>
+        </p>
+      </section>
+
+      <%= link_to 'Показать', question_path(question), class: 'btn btn-primary' %> 
+      <%= link_to 'Редактировать', edit_question_path(question), class: 'btn btn-secondary' %>
+      <%= link_to 'Удалить', question_path(question), class: 'btn btn-danger',
+        data: {method: :delete, confirm: 'Are you sure?'} %>
+    </div>
+  </article>
 <% end %>
