Создал модель ответов на вопросы. CRUD для ответов. Хелперы для заголовка названия страницы.

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,6 @@
+<% currently_at 'Главная' %>
+<% provide :page_title %>
+
 <h1>Добро пожаловать на AskIt!</h1>
 
-<footer>
-  &copy; bodrovis <%= Time.now.year %>
-</footer>
+&copy; bodrovis <%= Time.now.year %>
