--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,3 +1,6 @@
-<h1 class="mb-4">Новый вопрос</h1>
+<% currently_at 'Создание вопроса' %>
+<% provide :page_title, 'Создание вопроса' %>
+
+<h1 class="mb-4">Создание вопроса</h1>
 
 <%= render 'form' %>
