--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,3 +1,6 @@
+<% currently_at 'Редактор вопроса' %>
+<% provide :page_title, 'Редактор вопроса' %>
+
 <h1>Редактор вопроса</h1>
 
 <%= render 'form' %>
