--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,9 +7,9 @@
   <%= @question.formatted_created_at %>
 </time>
 
-<p class="lead my-3">
-  <%= @question.body %>
-</p>
+<div class="lead my-3">
+  <%= sanitize @question.body %>
+</div>
 
 <%= link_to 'Показать', question_path(@question), class: 'btn btn-primary' %> 
 <%= link_to 'Редактировать', edit_question_path(@question), class: 'btn btn-secondary' %>
@@ -24,18 +24,9 @@
 
 <h2 class="mt-5">Ответы</h2>
 
- <% @answers.each do |answer| %>
-  <article class="mb-3">
-    <time datetime="<%= answer.formatted_created_at %>">
-      <%= answer.formatted_created_at %>
-    </time>
+<%= paginate @answers %>
 
-    <p>
-      <%= answer.body %>
-    </p>
+<%= render partial: 'answers/answer', collection: @answers,
+  as: :answer, locals: {question: @question} %>
 
-    <%= link_to 'Редактировать', edit_question_answer_path(@question), class: 'btn btn-secondary' %>
-    <%= link_to 'Удалить', question_answer_path(@question, answer), class: 'btn btn-danger btn-xs',
-      data: {method: :delete, confirm: "Are you sure?"} %>
-  </article>
-<% end %> 
+<%= paginate @answers %>
